<resources>
    <string name="app_name">My Application</string>
    <string-array name="keterangan">
        <item>Hadir Tepat Waktu</item>
        <item>Terlambat</item>
        <item>Ijin</item>
        <item>Sakit</item>
    </string-array>
    <string name="tidak_dipilih">Tidak ada yang dipilih</string>
    <string name="pesan_peringatan">Apakah kamu yakin data yang akan kamu kirim sudah sesuai?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_datetime">Choose the date and time:</string>
    <string name="date_button">Date</string>
    <string name="time_button">Time</string>
    <string name="date_picker">datePicker</string>
    <string name="time_picker">timePicker</string>
    <string name="date">"Date: "</string>
    <string name="time">"Time: "</string>
    <string name="submit">Submit</string>
    <string name="keterangan">keterangan</string>
    <string name="masukkan_waktu">Masukkan Waktu</string>
    <string name="masukkan_tanggal">Masukkan Tanggal</string>
    <string name="absen_manual">Absen Manual</string>
    <string name="player_name">Nama Pemain</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="item">Item</string>
    <string name="about">About</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
